2003-08-11  Niklas Knutsson  <nq@altern.org>

	* Populate category combos
	* Turn base unit combo into entry as it probably is not a good idea to fill the combo with all units
	* Gladify the variable and function edit dialogs hidden callbacks.cc
	* Beautification of dialogs
	* Huge gladeification of signals and widget references

2003-08-10  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade: don't know what exactly, but i'm sure that we
	got rid of one c dialog more
	* src/callbacks.cc:
	* src/interface.cc:

2003-08-10  Niklas Knutsson  <nq@altern.org>

	* Use <sup></sup> for all exponents for consistency
	* New elegant and intelligent sorting, not only for internal purposes
	* Updated swedish translation.
	* Gettextized error messages.
	* Updaterad Calculator::error().
	* Only enable prefixes in front of units
	* Fix disable/enable variables/functions/units/unknown
	* Found true evil in Manager::sort(). This should solve many problems. :-)
	* Enable binary output for larger numbers
	* Fix nested functions
	* Fix prefix followed be unit
	* Fix functions without parenthesis
	* correct widget name (units_option_menu_to_unit)
	* handle long result by making the window not resizable and the result label wrap

2003-08-09  Niklas Knutsson  <nq@altern.org>

	* Swedish translation
	* More strings to translate
	* Binary output
	* Fix BASE()
	* Fix prefixes in expression
	* Added ability to disable unknown variables
	* Support unsolved function -- now log(x) returns log(x) instead of the result of log(0)
	* Fix prefix display mode (only use in front of units to avoid confusion and support exponents)

2003-08-08  Niklas Knutsson  <nq@altern.org>

	* Set LC_NUMERIC to "C" to make strold() happy
	* Minor restructuring in preparation for different decimal points
	* Comment out debug output. Now (x+y)^50 takes 1 instead of 100 seconds.
	  For those interested, the result of (x+y)^100 is 24287 pixels wide...

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>
