@@ -1,8 +1,9 @@
 2003-08-11  Niklas Knutsson  <nq@altern.org>
 
+	* Beautify insert function dialog
 	* Populate category combos
 	* Turn base unit combo into entry as it probably is not a good idea to fill the combo with all units
-	* Gladify the variable and function edit dialogs hidden callbacks.cc
+	* Gladeify the variable and function edit dialogs hidden callbacks.cc (gladeification finished?)
 	* Beautification of dialogs
 	* Huge gladeification of signals and widget references
 
